Fixed bug wrong padding top for intro column of Our Adventures, again

--- a/b/style.v2.css
+++ b/b/style.v2.css
@@ -7,12 +7,11 @@
     src: url(../font/shabby.ttf);
 }
 
-.pp2{font-size: 16px;}
+/*.pp2{font-size: 16px;}
 .pp2 a, .ttit {background: white;display: inline;float: left;padding: 10px 10px 100px;text-align: center;text-decoration: none;-webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);-moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);box-shadow: 0 4px 6px rgba(0,0,0,.3);z-index:0;position:relative;-webkit-filter: grayscale(0%);}
-.pp2 a:hover{filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */filter: gray; /* IE6-9 */-webkit-filter: grayscale(100%);-webkit-transition: all 0.5s ease;-moz-transition: all 0.5s ease;-o-transition: all 0.5s ease;-ms-transition: all 0.5s ease;transition: all 0.5s ease;}
 .pp2 a:after{color: #333;font-family: 'Amatic SC', cursive;word-spacing: 5px;content: attr(title);position: relative;top:50px;z-index: 999;}
 .pp2 a img{display: block; width: 100%; }
-.marginbottom{margin-bottom: 20%;}
+.marginbottom{margin-bottom: 20%;}*/
 .grunge8{color:#fff;margin-bottom:0;padding:10px 0 10px 20px;background-color: #494747}
 .grunge8, #ac h3, .sw .sw-title{text-shadow: 1px 1px 0px rgba(0,0,0,0.2);text-shadow: 1px 1px 0px rgba(0,0,0,0.2);border-right: 1px solid rgba(0, 0, 0, .2);border-left: 1px solid rgba(0, 0, 0, .2);border-bottom: 1px solid rgba(0, 0, 0, .2);border-top: 1px solid rgba(250, 250, 250, .2);}
 .ptwo{font-size:12px;width:100%;background:#fff;margin-bottom:30px; padding: 10px;}
